--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
         <button class="boton" onclick="mostrar()">Mi boton</button>
     </div>
 
-    <script src="simulacro-parcial.js"></script>
-    <!--<script src="simulacro-parcial2.js"></script>-->
+    <!--<script src="simulacro-parcial.js"></script>-->
+    <script src="simulacro-parcial2.js"></script>
 </body>
 
 </html>
